[package]
name = "ragent_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
ragent_core = { path = "../ragent_core" }
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.33"
bevy = { version = "0.13.0", default-features = false, features = ["bevy_ui", "bevy_asset"] }
derive-syn-parse = "0.1.5"
