[package]
name = "ragent_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
ragent_core = { git = "https://github.com/empathic-ai/ragent-core.git" }
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.33"
derive-syn-parse = "0.1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "=0.14.0", default-features = false, features = ["dynamic_linking"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "=0.14.0", default-features = false, optional = true }