[package]
name = "ragent_derive"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
ragent_core = { git = "https://github.com/empathic-ai/ragent-core.git", default-features = false }
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.33"
derive-syn-parse = "0.1.5"
proc-macro-crate = "3.2.0"
proc-macro2 = "1.0.92"
